Revision history for Perl module XML::RSS

       - ->parse() now explicitly returns $self.
            - http://rt.cpan.org/Public/Bug/Display.html?id=34914
        
1.35 - September 13, 2008
       - Added a Module::Build-based Build.PL so we'll have an easier time 
       with the META.yml and the Kwalitee.
       - Kwalitee - added "use warnings" to all Perl files.
            - now depending on at least perl-5.6.0.
       - Kwalitee - fixed the "use" statement of
       "Test::Run::CmdLine::Iface" to a runtime require.

1.34 - September 12, 2008
       - fixed a typo in the documentation of lib/XML/RSS.pm - 
       "regardless" instead of "regarless".
            - http://rt.cpan.org/Public/Bug/Display.html?id=37916
            - (Reported by Reuben Thomas, Fixed by Shlomif).
       - fixed a code fragment - pop() instead of shift() for older
       items, and while() instead of if():
            - http://rt.cpan.org/Public/Bug/Display.html?id=39231
            - (Reported by Dave, Fixed by Shlomif).

1.33 - June 8, 2008
       - Allowed the end-user to customise the _encode() routine in 
       XML::RSS::Private::Output::Base from XML::RSS using the
       encode_cb key.

1.32 - February 8, 2008
       - Fixed http://rt.cpan.org/Public/Bug/Display.html?id=25336 :
           - made sure the namespace specified elements can have a hash
           as a value in which case they'll be outputted as a standalone tag
           with attributes.
       - Fixed http://rt.cpan.org/Ticket/Display.html?id=25368 :
           - changed pop() to shift() to remove the oldest item in the
           example in lib/XML/RSS.pm, per the comments in the bug report.
       - Fixed http://rt.cpan.org/Ticket/Display.html?id=24329#txn-296761 :
           - updated the URLs for information about RSS mentioned under
           "=head1 DESCRIPTION", based on a Google search. 
           - (Shlomi Fish)
       - Fixed http://rt.cpan.org/Ticket/Display.html?id=33001 :